[package]
name = "libgbsd"
version = "1.0.0"
edition = "2021"
authors = ["Siergej Sobolewski <siergej@cartesianschool.org>"]
license = "BSD-3-Clause"

[lib]
name = "gbsd"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]
test = false
bench = false

[dependencies]
kernel_log = { path = "../../kernel/log" }
shared = { path = "../../shared" }
